fix 3170 Updated border style in date-picker.scss to prevent jumping effect on input hover

--- a/packages/apps/spaces/styles/date-picker.scss
+++ b/packages/apps/spaces/styles/date-picker.scss
@@ -136,7 +136,7 @@
 }
 
 .react-date-picker__button {
-  border: 0;
+  border: 1px solid transparent;
   background: transparent;
   padding: 4px 6px;
 }
